--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Tang Wei <wei.tang@coinflex.com>"]
 [tool.poetry.dependencies]
 python = "^3.7.2"
 eth-brownie = "^1.16.3"
+brownie-token-tester = "^0.3.2"
 
 [tool.poetry.dev-dependencies]
 
